--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -17,6 +17,11 @@ button {
     margin-left: clamp(0.5rem, 3vw, 2rem);
     cursor: pointer;
     transition: color 0.2s ease;
+    color: black;
+    text-decoration: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 button.active {
@@ -32,6 +37,7 @@ button.active {
 .social-media > i {
     padding: clamp(0.5rem, 2vw, 1rem);
     cursor: pointer;
+    color: black;
 }
 
 .social-media > i:hover {
