--- a/src/app/frames/my-room/my-room.component.css
+++ b/src/app/frames/my-room/my-room.component.css
@@ -88,6 +88,7 @@ img {
     .frame-container {
         width: 98%;
         margin: 10px auto;
+        margin-bottom: 10rem;
     }
 }
 
